various thematic and url updates

--- a/_posts/design/2014-09-13-grid.md
+++ b/_posts/design/2014-09-13-grid.md
@@ -8,7 +8,7 @@ categories:
     - design
 permalink: /design/grid/
 header:
-    image_fullwidth: "unsplash_brooklyn-bridge_header.jpg"
+    image_fullwidth: "mesh3.jpg"
 image:
     thumb: "unsplash_brooklyn-bridge-thumb.jpg"
 ---
