--- a/_posts/design/2015-08-15-comments.md
+++ b/_posts/design/2015-08-15-comments.md
@@ -4,7 +4,7 @@ subheadline: "Discussion"
 title: "Now with Comments!"
 teaser: "For a blog you need comments. Like all those other jekyll themes we baked in Disqus. It's easy to set, it works and makes a static jekyll blog more dynamic."
 header:
-    image_fullwidth: "header_typewriter.jpg"
+    image_fullwidth: "equations1.jpg"
     caption: Image by Florian Klauer
     caption_url: "http://florianklauer.de/"
 image:
